--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,6 +7,9 @@
 	<body style="margin: 0px; padding: 0px;">
 		<header style="background-color: red; height: 70px; width: 100%;">
 		</header>
+		<footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute">
+			<p style="text-align: center; margin: 20px">Best School></p>
+		</footer>
 	</body>
 </html>
 
