--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -3,23 +3,29 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/4-common.css">
-        <link rel="stylesheet" href="styles/4-filters.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="shortcut_icon" href="images/icon.png">
+        <link rel="stylesheet" href="styles/5-filters.css">
+        <link rel="shortcut icon" href="images/icon.png">
         <title>AirBnB_clone</title>
     </head>
     <body>
         <header>
-            <div class="logo_place"></div>
+            <div class="logo"></div>
         </header>
         <div class="container">
             <section class="filters">
-                <!-- for search button -->
-                <button>search</button>
+                <button>Search</button>
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+                </div>
             </section>
         </div>
-        <!-- footer  -->
         <footer>
             <p>Best School</p>
         </footer>
